# keywordcannibalisation

./: .gitignore  LICENSE  README.md  README.txt  pyproject.toml
.github/workflows/: ci.yml
cannibalize/: cli.py  config.py
cannibalize/db/: models.py  store.py
cannibalize/detect/: classify.py  cluster.py  impact.py  intent.py  pipeline.py
cannibalize/export/: csv_export.py  excel.py
cannibalize/ingest/: crawler.py  csv_import.py  gsc.py
cannibalize/recommend/: actions.py
cannibalize/track/: tracker.py
tests/: conftest.py  test_classify.py  test_cluster.py  test_config.py  test_crawler.py  test_csv_import.py  test_impact.py  test_intent.py  test_pipeline.py  test_recommend.py  test_tracker.py
tests/fixtures/: sample_gsc_data.csv
