[project]
name = "cannibalize"
version = "0.1.0"
description = "SEO keyword cannibalization detector"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9",
    "google-auth>=2.0",
    "google-auth-oauthlib>=1.0",
    "google-api-python-client>=2.0",
    "httpx>=0.25",
    "selectolax>=0.3",
    "scikit-learn>=1.3",
    "openpyxl>=3.1",
]

[project.scripts]
cannibalize = "cannibalize.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=7.0",
]
